[build-system]
requires = ["setuptools>=40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 119
target-version = ["py310"]
include = 'meta/*py'

[tool.isort]
profile = "black"
combine_as_imports = true
default_section = "THIRDPARTY"
force_grid_wrap = 0
include_trailing_comma = true
known_first_party = "knocker"
line_length = 119
multi_line_output = 3
use_parentheses = true

[tool.ruff]
ignore = []
line-length = 119
target-version = "py310"

[tool.ruff.mccabe]
max-complexity = 10

[tool.towncrier]
package = "meta"
directory = "changes"
filename = "HISTORY.rst"
title_format = "{version} ({project_date})"

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-module = true
ignore-nested-functions = true
fail-under = 0
exclude = ["docs", ".tox"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
verbose = 0
quiet = false
whitelist-regex = []
color = true

[tool.bumpversion]
allow_dirty = false
commit = true
message = "Release {new_version}"
commit_args = "--no-verify"
tag = false
current_version = "2.4.1"
parse = """(?x)
    (?P<major>[0-9]+)
    \\.(?P<minor>[0-9]+)
    \\.(?P<patch>[0-9]+)
    (?:
        .(?P<release>dev)
        (?:(?P<relver>[0-9]+))?
    )?
"""
serialize = [
    "{major}.{minor}.{patch}.{release}{relver}",
    "{major}.{minor}.{patch}"
]

[tool.bumpversion.parts.release]
values = [
    "dev",
    ""
]
optional_value = "dev"

[[tool.bumpversion.files]]
filename = "meta/__init__.py"
search = "{current_version}"
