[bumpversion]
current_version = 2.0.0a1
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\.?)(?P<release>[a-z]*)(?P<relver>\d*)
serialize =
    {major}.{minor}.{patch}.{release}{relver}
    {major}.{minor}.{patch}
commit = True
tag = True
sign_tags = True
tag_name = {new_version}
message = Release {new_version}

[bumpversion:part:release]
optional_value = gamma
values =
    dev
    a
    b
    rc
    gamma

[bumpversion:file:meta/__init__.py]

[metadata]
name = django-meta
version = attr: meta.__version__
url = https://github.com/nephila/django-meta
project_urls =
    Documentation = https://django-meta.readthedocs.io/
author = Monwara LLC
author_email = branko@monwara.com
maintainer = Nephila
maintainer_email = info@nephila.it
description = Pluggable app for handling webpage meta tags and OpenGraph properties
long_description = file: README.rst, HISTORY.rst
long_description_content_type = text/x-rst
license = BSD
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
include_package_data = True
install_requires =
    six
setup_requires =
    setuptools
packages = meta
python_requires = >=3.5
test_suite = cms_helper.run
zip_safe = False

[options.package_data]
* = *.txt, *.rst
meta = *.html *.png *.gif *js *jpg *jpeg *svg *py *mo *po

[options.extras_require]
docs =
    django<3.1

[upload]
repository = https://upload.pypi.org/legacy/

[sdist]
formats = zip

[bdist_wheel]
universal = 1
