[metadata]
name = django-meta
version = attr: meta.__version__
url = https://github.com/nephila/django-meta
project_urls =
	Documentation = https://django-meta.readthedocs.io/
author = Monwara LLC
author_email = branko@monwara.com
maintainer = Nephila
maintainer_email = info@nephila.digital
description = Pluggable app for handling webpage meta tags and OpenGraph properties
long_description = file: README.rst, HISTORY.rst
long_description_content_type = text/x-rst
license = BSD
license_file = LICENSE
classifiers =
	Development Status :: 5 - Production/Stable
	Framework :: Django
	Framework :: Django :: 3.2
	Framework :: Django :: 4.0
	Framework :: Django :: 4.1
	Framework :: Django :: 4.2
	Environment :: Web Environment
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11

[options]
include_package_data = True
setup_requires =
	setuptools
packages = meta
python_requires = >=3.7
test_suite = cms_helper.run
zip_safe = False

[options.package_data]
* = *.txt, *.rst
meta = *.html *.png *.gif *js *jpg *jpeg *svg *py *mo *po

[options.extras_require]
docs =
	django<5.0

[sdist]
formats = zip

[bdist_wheel]
universal = 1
